--- a/Boutique-FE/src/pages/cart/cart.component.html
+++ b/Boutique-FE/src/pages/cart/cart.component.html
@@ -18,7 +18,7 @@
         <div class="cart-item" *ngFor="let item of cartItems">
           <!-- Product Image -->
           <div class="cart-item-product">
-            <img src="src/pages/images/lehanga.png" alt="{{ item.product.title }}" class="item-image">
+            <img src="src/assets/product1.jpg" alt="{{ item.product.title }}" class="item-image">
           </div>
 
           <!-- Product Name and Description -->
