--- a/Boutique-FE/src/pages/sareefolder/saree/saree.component.html
+++ b/Boutique-FE/src/pages/sareefolder/saree/saree.component.html
@@ -8,7 +8,8 @@
     >
       <!-- Card Image -->
       <div class="card-image">
-        <img [src]="product.imageUrl" alt="Product Image" />
+        <img src="/assets/images/bg3.png" alt="bg1" />
+
       </div>
   
       <!-- Card Details (Placed below the image) -->
