--- a/Boutique-FE/src/pages/dashboard/dashboard.component.css
+++ b/Boutique-FE/src/pages/dashboard/dashboard.component.css
@@ -5,7 +5,7 @@
   align-items: center;
   justify-content: center;
   text-align: center;
-  background-image: url("../images/bg3.png"); /* Main background image */
+  background-image: url("../../assets/images/bg3.png"); /* Main background image */
   background-size: cover; /* Cover the container */
   background-position: center;
   background-repeat: no-repeat;
