--- a/Boutique-FE/src/pages/sareefolder/viewsaree/viewsaree.component.css
+++ b/Boutique-FE/src/pages/sareefolder/viewsaree/viewsaree.component.css
@@ -3,63 +3,78 @@
     display: flex;
     justify-content: space-between;
     gap: 40px;
-    padding: 40px;
+    padding: 10px;
     max-width: 1200px;
     margin: 0 auto;
     background-color: #f9f9f9;
   }
   
-  /* Left side */
   .left-side {
-    flex: 1;
+    width: 100%;
+    max-width: 400px;
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
     gap: 20px;
+    /* max-width: 50%; */
+    align-items: center;
   }
   
+  /* Big Image Card */
   .big-card {
     width: 100%;
     max-width: 500px;
-    margin-bottom: 20px;
+    height: 500px;
+    border: 2px solid #ddd;
     border-radius: 10px;
     overflow: hidden;
-    box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    background-image: url('../../../assets/images/bg3.png');
   }
   
   .big-image {
     width: 100%;
     height: auto;
-    object-fit: cover;
-    border-radius: 10px;
+    display: block;
   }
   
-  /* Small image cards */
+  /* Small Image Cards */
   .small-cards {
+    width: 300px;
+    height: 100px;
     display: flex;
     gap: 10px;
-    flex-wrap: wrap;
+    justify-content: center;
+  
   }
   
   .small-card {
-    width: 80px;
-    height: 80px;
-    cursor: pointer;
-    border-radius: 5px;
+    border: 2px solid transparent;
+    border-radius: 10px;
     overflow: hidden;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    cursor: pointer;
+    width: 300px;
+    height: 100px;
+    transition: transform 0.3s, border-color 0.3s;
+    background-image: url('../../../assets/images/lehanga.png');
+    object-fit: contain;
+    /* background: no-repeat; */
+  }
+  
+  .small-card:hover {
+    transform: scale(1.1);
+    border-color: #007bff;
+  }
+  
+  .small-card.selected {
+    border-color: #007bff;
   }
   
   .small-image {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    border-radius: 5px;
-    transition: transform 0.3s ease;
-  }
-  
-  .small-image:hover {
-    transform: scale(1.1);
+    width: 300px;
+    height: 100px;
+    object-fit: contain;
+    background-image: url('../../../assets/images/lehanga.png');
+    border-radius: 8px;
   }
   
   /* Right side */
@@ -72,7 +87,7 @@
   
   /* Product details */
   .expanded-details {
-    padding: 30px;
+    padding: 10px;
     background-color: #fff;
     border-radius: 10px;
     box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
