mokshedestination page is designed

--- a/Boutique-FE/src/pages/dashboard/dashboard.component.html
+++ b/Boutique-FE/src/pages/dashboard/dashboard.component.html
@@ -1,23 +1,19 @@
 <div class="main">
   <div class="sec">
     <div class="sec1">
-<div>
-  <h1>MIYA</h1>
-  <p>To Customize Your Product As your Needs</p>
-</div>
-<div class="btn">
-  <button  class="btn1" (click)="cutomize()">See More</button>
-</div>
+      <h1 class="title">MIYA</h1>
+      <p>Get Customized Costumes Tailored Just for You</p>
+      <div class="btn">
+        <button class="btn1" (click)="cutomize()">Explore More</button>
+      </div>
     </div>
     <div class="sec2">
-      <div>
-        <h1>SAME PINCH </h1>
-        <p>To Buy Our Customize  Product As your Needs</p>
-      </div>
+      <h1 class="title">SAME PINCH</h1>
+      <p>Discover Ready-Made Apparel That Fits Your Style</p>
       <div class="btn">
-        <button class="btn1">See More</button>
+        <button class="btn1">Shop Now</button>
       </div>
     </div>
   </div>
 </div>
-  
+
