--- a/Boutique-FE/src/pages/login/login.component.html
+++ b/Boutique-FE/src/pages/login/login.component.html
@@ -1,55 +1,24 @@
 <div class="login-container">
   <!-- Logo Section -->
   <div class="logo-container">
-    <img src="./media/mo1.png" class="logo" />
+    <div class="logo"></div>
   </div>
 
   <h2>Login</h2>
 
   <form [formGroup]="loginform" (ngSubmit)="onLogin()" class="form-container">
-    <!-- Email Field -->
     <div class="form-group">
       <label for="email">Email</label>
-      <input 
-        type="email" 
-        class="form-control" 
-        formControlName="email"
-        name="email" 
-        required>
-      
-      <!-- Display Validation Errors for Email -->
-      <div *ngIf="loginform.get('email')?.invalid && loginform.get('email')?.touched" class="error">
-        <p *ngIf="loginform.get('email')?.hasError('required')">Email is required</p>
-        <p *ngIf="loginform.get('email')?.hasError('email')">Enter a valid email</p>
-      </div>
+      <input type="email" class="form-control" formControlName="email" name="email" required>
     </div>
 
-    <!-- Password Field -->
     <div class="form-group">
       <label for="password">Password</label>
-      <input 
-        type="password" 
-        class="form-control" 
-        formControlName="password"
-        name="password" 
-        required>
-      
-      <!-- Display Validation Errors for Password -->
-      <div *ngIf="loginform.get('password')?.invalid && loginform.get('password')?.touched" class="error">
-        <p *ngIf="loginform.get('password')?.hasError('required')">Password is required</p>
-        <p *ngIf="loginform.get('password')?.hasError('minlength')">Password must be at least 6 characters long</p>
-      </div>
+      <input type="password" class="form-control" formControlName="password" name="password" required>
     </div>
 
     <button type="submit" [disabled]="loginform.invalid" class="login-button">Login</button>
   </form>
 
   <p id="navigate">Don't have an account? <button class="signup-button" (click)="goToSignUp()">Sign Up</button></p>
-
-  <!-- <app-popup-message
-  *ngIf="showPopup"
-  [title]="popupTitle"
-  [message]="popupMessage"
-  (closePopup)="closePopup()"
-></app-popup-message> -->
 </div>
